<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:id="@+id/ll"
    tools:context=".PersonalActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_64"
        android:background="@color/white"
        android:id="@+id/personal_toolbar"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_img"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_13"
            android:src="@mipmap/back_white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_text"
            android:text="@string/personal"
            android:textSize="@dimen/dp_16"
            android:textColor="@color/c_333333"
            android:layout_gravity="center"
            />
    </android.support.v7.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_4"
        android:background="@drawable/gra_white_de"
        android:layout_below="@id/personal_toolbar"
        android:id="@+id/view_v"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_12"
        android:text="获取途径" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_211"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_13"
        app:cardCornerRadius="@dimen/dp_6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:id="@+id/head_portrait_layout"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_14"
                    android:text="@string/head_portrait"
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/sp_14" />

                <ImageView
                    android:id="@+id/head_portrait"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_14"

                    />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/c_f0f0f0" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:layout_weight="1"
                android:id="@+id/rl_username"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_14"
                    android:text="@string/user_nickname"
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_14"
                    android:textColor="@color/c_999999"
                    android:textSize="@dimen/sp_14"

                    />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/c_f0f0f0" />

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/c_333333"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_14"/>

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/c_999999"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_14"
                    android:text="保密"
                    />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/c_f0f0f0"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"/>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:id="@+id/rl_personalized_signature"
                >

                <TextView
                    android:id="@+id/qianming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personalized_signature"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/c_333333"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_14"/>

                <TextView
                    android:id="@+id/personalized_signature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/c_999999"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/qianming"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_14"
                    android:layout_marginLeft="@dimen/dp_10"
                    />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_111"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_23"
        app:cardCornerRadius="@dimen/dp_6">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:text="@string/change_password"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_333333"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/dp_14"
                android:gravity="center_vertical"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/c_f0f0f0"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_below="@id/change_password"/>

            <TextView
                android:id="@+id/bind_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:text="@string/bind_phone"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_333333"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/dp_14"
                android:gravity="center_vertical"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:text="@string/log_out"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_28"
        android:background="@drawable/color_navigation"/>
</LinearLayout>