<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp_308"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/head_portrait"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_37"
        android:background="@mipmap/lalala" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_11"
        android:layout_marginTop="@dimen/dp_42"
        android:layout_toRightOf="@id/head_portrait"
        android:text="林小姐"
        android:textColor="@color/c_333333"
        android:textSize="@dimen/sp_22" />

    <TextView
        android:id="@+id/idiographic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginLeft="@dimen/dp_13"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_toRightOf="@id/head_portrait"
        android:text="四肢不勤五谷不分人懒嘴馋花痴健忘"
        android:textColor="@color/c_999999"
        android:textSize="@dimen/sp_12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/idiographic"
        android:layout_marginRight="@dimen/dp_21"
        android:layout_marginTop="@dimen/dp_5"
        android:text="编辑"
        android:textColor="@color/c_fa6a13"
        android:textSize="@dimen/sp_14" />

    <ImageView
        android:id="@+id/huabi"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_15"
        android:layout_alignParentRight="true"
        android:layout_below="@id/idiographic"
        android:layout_marginRight="@dimen/dp_54"
        android:layout_marginTop="@dimen/dp_5"
        android:src="@drawable/icon_me_bianji" />

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="@dimen/dp_288"
        android:layout_height="@dimen/dp_122"
        android:layout_below="@id/head_portrait"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_38">

        <ImageView
            android:layout_width="@dimen/dp_288"
            android:layout_height="@dimen/dp_122"
            android:src="@mipmap/bg_number_default" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/my_purse"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/my_purse_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_25"
            android:layout_marginLeft="@dimen/dp_101"
            android:layout_marginTop="@dimen/dp_29"
            android:text="@string/my_purse_money"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_58" />

        <TextView
            android:id="@+id/element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/my_purse_money"
            android:layout_marginRight="@dimen/dp_100"
            android:layout_toRightOf="@id/my_purse_money"
            android:text="@string/element"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/t_f"
            android:layout_width="@dimen/dp_6"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_20"
            android:text="»"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/win_a_prize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_11"
            android:layout_marginRight="@dimen/dp_6"
            android:layout_toLeftOf="@id/t_f"
            android:text="@string/win_a_prize"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/dp_308"
        android:layout_height="@dimen/dp_212"
        android:layout_below="@id/rl"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_19"
        app:cardBackgroundColor="@color/white"

        app:cardCornerRadius="@dimen/dp_6">

        <LinearLayout
            android:layout_width="@dimen/dp_308"
            android:layout_height="@dimen/dp_212"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="@dimen/dp_228"
                android:layout_height="@dimen/dp_53">

                <ImageView
                    android:id="@+id/my_card_volume_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_11"
                    android:src="@drawable/icon_me_kaquan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_11"
                    android:layout_toRightOf="@id/my_card_volume_img"
                    android:text="@string/my_card_volume"
                    android:textColor="@color/c333333"
                    android:textSize="@dimen/sp_14" />

                <ImageView
                    android:layout_width="@dimen/dp_6"
                    android:layout_height="@dimen/dp_11"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_12"
                    android:src="@mipmap/right_jian_tou" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/c_f0f0f0" />

            <RelativeLayout
                android:layout_width="@dimen/dp_228"
                android:layout_height="@dimen/dp_53">

                <ImageView
                    android:id="@+id/already_bought_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_11"
                    android:src="@drawable/icon_me_yigou" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_11"
                    android:layout_toRightOf="@id/already_bought_img"
                    android:text="@string/already_bought"
                    android:textColor="@color/c333333"
                    android:textSize="@dimen/sp_14"

                    />

                <ImageView
                    android:layout_width="@dimen/dp_6"
                    android:layout_height="@dimen/dp_11"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_12"
                    android:src="@mipmap/right_jian_tou" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/c_f0f0f0" />
            <RelativeLayout
                android:layout_width="@dimen/dp_228"
                android:layout_height="@dimen/dp_53">

                <ImageView
                    android:id="@+id/my_favorite_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_11"
                    android:src="@drawable/icon_me_shoucang" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_11"
                    android:layout_toRightOf="@id/my_favorite_img"
                    android:text="@string/my_favorite"
                    android:textColor="@color/c333333"
                    android:textSize="@dimen/sp_14"

                    />

                <ImageView
                    android:layout_width="@dimen/dp_6"
                    android:layout_height="@dimen/dp_11"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_12"

                    android:src="@mipmap/right_jian_tou" />
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/c_f0f0f0" />
            <RelativeLayout
                android:layout_width="@dimen/dp_228"
                android:layout_height="@dimen/dp_53">

                <ImageView
                    android:id="@+id/my_vote_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_11"
                    android:src="@drawable/icon_me_guanzhu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_11"
                    android:layout_toRightOf="@id/my_vote_img"
                    android:text="@string/my_vote"
                    android:textColor="@color/c333333"
                    android:textSize="@dimen/sp_14"

                    />

                <ImageView
                    android:layout_width="@dimen/dp_6"
                    android:layout_height="@dimen/dp_11"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_12"

                    android:src="@mipmap/right_jian_tou" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

 <!--   <RelativeLayout
        android:layout_width="@dimen/dp_308"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_13"
        android:layout_marginRight="@dimen/dp_13"

        >-->
      <ImageView
          android:layout_width="@dimen/dp_14"
          android:layout_height="@dimen/dp_13"
          android:src="@drawable/icon_me_kefu"
          android:id="@+id/icon_me_kefu"
          android:layout_marginBottom="@dimen/dp_30"
          android:layout_alignParentBottom="true"
          android:layout_marginLeft="@dimen/dp_12"
          />
      <!--  <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/c333333"
            android:layout_alignTop="@id/icon_me_kefu"
            android:layout_toRightOf="@id/icon_me_kefu"
            />-->

    <!--</RelativeLayout>-->
</RelativeLayout>